--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@szhsin/react-accordion": "^1.2.4",
+    "@tanstack/react-table": "^8.16.0",
+    "ag-grid-react": "^31.2.1",
+    "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
