--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@szhsin/react-accordion": "^1.2.4",
     "@tanstack/react-table": "^8.16.0",
     "ag-grid-react": "^31.2.1",
+    "luxon": "^3.4.4",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
