--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@tanstack/react-table": "^8.16.0",
     "ag-grid-react": "^31.2.1",
     "axios": "^1.6.8",
+    "jodit-react": "^4.0.25",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "rsuite": "^5.59.0",
     "styled-components": "^6.1.8"
