--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@szhsin/react-accordion": "^1.2.4",
     "@tanstack/react-table": "^8.16.0",
     "ag-grid-react": "^31.2.1",
+    "jodit-react": "^4.0.25",
     "luxon": "^3.4.4",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
