--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@headlessui/react": "^1.7.18",
     "@szhsin/react-accordion": "^1.2.4",
     "@tanstack/react-table": "^8.16.0",
+    "@tinymce/tinymce-react": "^5.0.1",
     "ag-grid-react": "^31.2.1",
+    "axios": "^1.6.8",
     "jodit-react": "^4.0.25",
     "luxon": "^3.4.4",
-    "axios": "^1.6.8",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
