--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@szhsin/react-accordion": "^1.2.4",
     "@tanstack/react-table": "^8.16.0",
     "ag-grid-react": "^31.2.1",
+    "axios": "^1.6.8",
+    "flatpickr": "^4.6.13",
     "jodit-react": "^4.0.25",
     "luxon": "^3.4.4",
-    "axios": "^1.6.8",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
@@ -26,6 +27,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "rsuite": "^5.59.0",
     "styled-components": "^6.1.8"
   },
