--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "rsuite": "^5.59.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
