--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "rsuite": "^5.59.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
