--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "flatpickr": "^4.6.13",
     "jodit-react": "^4.0.25",
+    "jspdf-autotable": "^3.8.2",
     "luxon": "^3.4.4",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
