--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "recharts": "^2.12.6",
     "rsuite": "^5.59.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
